Now the response to create a new delivery will give insightful information. To remove a favorite now you will need to specify product ID in the route. Minor fixes to documentation.
